Restaurant Project Init

--- a/yash/vue/restaurant/.gitignore
+++ b/yash/vue/restaurant/.gitignore
@@ -1,9 +1,7 @@
 .DS_Store
-yash/vue/blog/node_modules
-yash/vue/blog/dist
+node_modules
+/dist
 
-yash/vue/restaurant/node_modules
-yash/vue/restaurant/dist
 
 # local env files
 .env.local
