add laravel folder in git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ yash/Practice/Live/Express/Authsystem/node_modules
 yash/Practice/Live/Express/CloudinaryFileUpload/node_modules
 yash/Practice/Live/Express/FirstProject/node_modules
 yash/Practice/Live/React/React/node_modules
+yash/laravel
 
 
 
